@@ -1,6 +1,10 @@
 #
 # Automatically generated file; DO NOT EDIT.
+<<<<<<< HEAD
 # Linux/x86 3.16.2 Kernel Configuration
+=======
+# Linux/x86 3.15.7 Kernel Configuration
+>>>>>>> Merge branch 'master' of github.com:mastacontrola/fogproject
 #
 CONFIG_64BIT=y
 CONFIG_X86_64=y
@@ -157,7 +161,10 @@ CONFIG_SYSCTL_EXCEPTION_TRACE=y
 CONFIG_HAVE_PCSPKR_PLATFORM=y
 CONFIG_EXPERT=y
 CONFIG_UID16=y
+<<<<<<< HEAD
 CONFIG_SGETMASK_SYSCALL=y
+=======
+>>>>>>> Merge branch 'master' of github.com:mastacontrola/fogproject
 CONFIG_SYSFS_SYSCALL=y
 # CONFIG_SYSCTL_SYSCALL is not set
 # CONFIG_KALLSYMS is not set
@@ -1786,6 +1793,10 @@ CONFIG_LPC_SCH=y
 # CONFIG_MFD_SM501 is not set
 # CONFIG_MFD_SMSC is not set
 # CONFIG_ABX500_CORE is not set
+<<<<<<< HEAD
+=======
+# CONFIG_MFD_STMPE is not set
+>>>>>>> Merge branch 'master' of github.com:mastacontrola/fogproject
 CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_TI_AM335X_TSCADC is not set
 # CONFIG_MFD_LP3943 is not set
