@@ -5,6 +5,7 @@ tasking is created, get closed and not properly closing the actual deployed
 task.
 * Fix proxy information to NOT proxy storage node internalized Storage Node
 information.
+<<<<<<< HEAD
 * Fix multicast issues for all relevant systems. Thank you Curtis.
 * Fix snapins operate only if the host has snapins.
 * Fix size display of images on server to display proper sizes through the use
@@ -21,6 +22,8 @@ on the disk within the /images folder.  mkdir /images/<imagepath>; mv
 * Change resizable images to all use the same principle of Linux resizable.
 This should allow OEM built systems to be imaged even with resizable.
 * Add protection flag to image files.
+=======
+>>>>>>> Merge branch 'master' of github.com:mastacontrola/fogproject
 * Add installer files from David Fear to fog to allow FOG Installation on
 Arch Linux.
 * Add partition imaging selection options into GUI and fog to operate within.
